@@ -1,20 +1,11 @@
 package com.mentoria.agil.backend.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import com.mentoria.agil.backend.dto.PerfilMentorRequestDTO;
 import com.mentoria.agil.backend.dto.response.PerfilMentorListResponseDTO;
@@ -22,7 +13,9 @@ import com.mentoria.agil.backend.dto.response.PerfilMentorResponseDTO;
 import com.mentoria.agil.backend.interfaces.service.PerfilMentorServiceInterface;
 import com.mentoria.agil.backend.model.PerfilMentor;
 import com.mentoria.agil.backend.model.User;
+import com.mentoria.agil.backend.repository.UserRepository;
 
+import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
 
 @RestController
@@ -30,26 +23,30 @@ import jakarta.validation.Valid;
 public class PerfilMentorController {
     
     private final PerfilMentorServiceInterface mentorService;
+    private final UserRepository userRepository;
 
-    public PerfilMentorController(PerfilMentorServiceInterface mentorService) {
+    public PerfilMentorController(PerfilMentorServiceInterface mentorService, UserRepository userRepository) {
         this.mentorService = mentorService;
+        this.userRepository = userRepository;
     }
 
     @PostMapping
-    public ResponseEntity<PerfilMentorResponseDTO> criarPerfilMentor(@Valid @RequestBody PerfilMentorRequestDTO request) {
-        UserDetails userDetails = getUsuarioAutenticado();
-        User userAutenticado = (User) userDetails;
+public ResponseEntity<PerfilMentorResponseDTO> criarPerfilMentor(@Valid @RequestBody PerfilMentorRequestDTO request) {
+    UserDetails userDetails = getUsuarioAutenticado();
+    
+    // Procura o utilizador gerido pelo JPA no repositório em vez de fazer cast direto
+    User userAutenticado = userRepository.findByEmail(userDetails.getUsername())
+            .orElseThrow(() -> new EntityNotFoundException("Utilizador não encontrado"));
 
-        PerfilMentor perfilSalvo = mentorService.criarPerfilMentor(
-            userAutenticado,
-            request.getEspecializacao(),
-            request.getExperiencias(),
-            request.getFormacao()
-        );
+    PerfilMentor perfilSalvo = mentorService.criarPerfilMentor(
+        userAutenticado,
+        request.getEspecializacao(),
+        request.getExperiencias(),
+        request.getFormacao()
+    );
 
-        PerfilMentorResponseDTO response = new PerfilMentorResponseDTO(perfilSalvo);
-        return new ResponseEntity<>(response, HttpStatus.CREATED);
-    }
+    return new ResponseEntity<>(new PerfilMentorResponseDTO(perfilSalvo), HttpStatus.CREATED);
+}
 
     @GetMapping
     public ResponseEntity<List<PerfilMentorListResponseDTO>> listarMentores() {
@@ -57,7 +54,7 @@ public class PerfilMentorController {
         
         List<PerfilMentorListResponseDTO> response = mentores.stream()
             .map(PerfilMentorListResponseDTO::new)
-            .collect(Collectors.toList());
+            .toList();
             
         return ResponseEntity.ok(response);
     }
@@ -82,15 +79,11 @@ public class PerfilMentorController {
         if (!user.getEmail().equals(userDetails.getUsername())) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
         }
-
-        user.setName(request.getName());
-        user.setEmail(request.getEmail());
         
         perfil.setEspecializacao(request.getEspecializacao());
         perfil.setExperiencias(request.getExperiencias());
         perfil.setFormacao(request.getFormacao());
         
-
         PerfilMentor perfilAtualizado = mentorService.atualizar(user, perfil);
         PerfilMentorResponseDTO response = new PerfilMentorResponseDTO(perfilAtualizado);
         return ResponseEntity.ok(response);
@@ -99,7 +92,6 @@ public class PerfilMentorController {
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deletarMentor(@PathVariable Long id) {
         UserDetails userDetails = getUsuarioAutenticado();
-        
         PerfilMentor perfil = mentorService.buscarPorId(id);
         
         boolean isAdmin = userDetails.getAuthorities().stream()
